Controller 수정 (post) 이에 따른 테스팅 코드, 문서 수정

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -27,6 +27,9 @@ include::{snippets}/post-todo/http-response.adoc[]
 .response-header
 include::{snippets}/post-todo/response-headers.adoc[]
 
+.response-fields
+include::{snippets}/post-todo/response-fields.adoc[]
+
 === 특정 할일 수정
 .curl-request
 include::{snippets}/patch-todo/curl-request.adoc[]
